fix: prevent clipping of search widget (Booking UI) (#768)

--- a/booking-ui/src/styles/Search.css
+++ b/booking-ui/src/styles/Search.css
@@ -78,7 +78,7 @@
     bottom: 0px;
     left: 0px;
     width: 100%;
-    height: 270px;
+    max-height: 350px;
     padding: 20px;
     padding-top: 0px;
     border-radius: 10px;
